--- a/Fundamentos/Fundamentos.csproj
+++ b/Fundamentos/Fundamentos.csproj
@@ -76,11 +76,47 @@
     <Compile Include="Form08Char.Designer.cs">
       <DependentUpon>Form08Char.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form09ValidarMail.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form09ValidarMail.Designer.cs">
+      <DependentUpon>Form09ValidarMail.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form10SumarNumerosString.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form10SumarNumerosString.Designer.cs">
+      <DependentUpon>Form10SumarNumerosString.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form11ValidarIsbn.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form11ValidarIsbn.Designer.cs">
+      <DependentUpon>Form11ValidarIsbn.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form12StringBuilder.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form12StringBuilder.Designer.cs">
+      <DependentUpon>Form12StringBuilder.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form13ColeccionGrafica.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form13ColeccionGrafica.Designer.cs">
+      <DependentUpon>Form13ColeccionGrafica.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form14SeleccionMultipleListBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form14SeleccionMultipleListBox.Designer.cs">
+      <DependentUpon>Form14SeleccionMultipleListBox.cs</DependentUpon>
     </Compile>
     <Compile Include="FormConversion.cs">
       <SubType>Form</SubType>
@@ -111,8 +147,26 @@
     <EmbeddedResource Include="Form08Char.resx">
       <DependentUpon>Form08Char.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Form09ValidarMail.resx">
+      <DependentUpon>Form09ValidarMail.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form10SumarNumerosString.resx">
+      <DependentUpon>Form10SumarNumerosString.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form11ValidarIsbn.resx">
+      <DependentUpon>Form11ValidarIsbn.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form12StringBuilder.resx">
+      <DependentUpon>Form12StringBuilder.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form13ColeccionGrafica.resx">
+      <DependentUpon>Form13ColeccionGrafica.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form14SeleccionMultipleListBox.resx">
+      <DependentUpon>Form14SeleccionMultipleListBox.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormConversion.resx">
       <DependentUpon>FormConversion.cs</DependentUpon>
