--- a/ProyectoClases/ProyectoClases.csproj
+++ b/ProyectoClases/ProyectoClases.csproj
@@ -41,6 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Direccion.cs" />
+    <Compile Include="Empleado.cs" />
+    <Compile Include="Mes.cs" />
     <Compile Include="Persona.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
