--- a/ProyectoClases/ProyectoClases.csproj
+++ b/ProyectoClases/ProyectoClases.csproj
@@ -42,9 +42,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Direccion.cs" />
+    <Compile Include="Director.cs" />
     <Compile Include="Empleado.cs" />
     <Compile Include="Mes.cs" />
     <Compile Include="Persona.cs" />
+    <Compile Include="Producto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
