--- a/Fundamentos/Fundamentos.csproj
+++ b/Fundamentos/Fundamentos.csproj
@@ -214,6 +214,18 @@
     <Compile Include="Form30SerializarClase.Designer.cs">
       <DependentUpon>Form30SerializarClase.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form31SerializarColeccion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form31SerializarColeccion.Designer.cs">
+      <DependentUpon>Form31SerializarColeccion.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Form32SerializarImagen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form32SerializarImagen.Designer.cs">
+      <DependentUpon>Form32SerializarImagen.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormConversion.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -311,6 +323,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form30SerializarClase.resx">
       <DependentUpon>Form30SerializarClase.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form31SerializarColeccion.resx">
+      <DependentUpon>Form31SerializarColeccion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form32SerializarImagen.resx">
+      <DependentUpon>Form32SerializarImagen.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormConversion.resx">
       <DependentUpon>FormConversion.cs</DependentUpon>
